Update JVM options to use MaxMetaspaceSize