@@ -2,6 +2,6 @@ def getResources() {
     return [requests: [cpu: "500m", memory: "1Gi"], limits: [cpu: "1", memory: "2Gi"]]
 }
 def getJvmOpts() {
-    return "-Xmx1500m -XX:MaxPermSize=256m"
+    return "-Xmx1500m -XX:MaxMetaspaceSize=256m"
 }
 return this
